# hybx_networking

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32s3
data/: Secrets.json
include/: hybx_networking.h
src/: CMakeLists.txt  hybx_mdns.c  hybx_mqtt.c  hybx_netinfo.c  hybx_sntp.c  hybx_wifi.c  idf_component.yml  main.c
